    - Circuit network
      - Measure total accumulator charge and capacity (via "Capacity Combinator")
      - Daylight, motion, pollution, and pressure plate sensors (via "Kontraptions")
      - Wireless signal transmissions (via "Kontraptions")
    - Combat
      - Remote explosives (via "Kontraptions")
      - Early game fire (via "Kontraptions")
    - Power generation
      - Fluids-based boilers and early steam turbines (via "Superheating")
      - Plutonium power and weapon production chains (via "PlutoniumEnergy")
      - Store excess energy as steam using electric boilers (via "Electric Boiler")
      - Utilise wall-estate for generating clean power (via "Solar Walls")
      - Utilise wall-estate for storing excess power (via "Accumulator Walls")
      - Higher-tier solar power production (via "Advanced Solar HR")
      - Traversable solar panels (via "Flat Solar Panels - Solar Freakin' Roadway")
    - Logistics
      - Restrict pipe connections and control fluid flow (via "Flow Control")
      - Configure input/output layout for fluid-based crafting (via "Fluid Permutations Fixed")
      - Small tank for storing fluids (via "Extra Storage Tank: Minibuffer")
      - Large tank for storing fluids (via "Large Storage Tank")
      - Specialised pipes for increased long distance fluid flow (via "Fluid Must Flow")
      - Improved construction and logistic robots (via "Hercules Robots")
      - Additional larger variants of chests (via "AAI Containers")
      - Configurable inserter drop-off/pick-up positions (via "Side Inserters")
      - Fluid delivery using logistics network (via "Logistic Tank")
      - Early game robot logistics (via "Kontraptions")
    - Miscellaneous
      - Relocate shipwreck/set spawn point (via "Relocatable Shipwreck")
      - Signposts (via "Kontraptions")
      - Torches (via "Kontraptions")
      - Canal building/water placement (via "Canal Excavator")
      - Mineable platforms for water placement (via "Platforms")