@@ -14,6 +14,7 @@
         "Advanced-Electric-Revamped-v16 >= 0.6.15",
         "alien-biomes >= 0.6.8",
         "(?) alien-biomes-hr-terrain",
+        "ArmouredBiters >= 1.1.9",
         "AsphaltPaving >= 1.3.1",
         "Asteroid_Mining >= 0.9.15",
         "BatteryElectricTrain >= 1.1.7",
