@@ -17,6 +17,7 @@ Date: 9999-99-99
     - Combat
       - Remote explosives (via "Kontraptions")
       - Early game fire (via "Kontraptions")
+      - Snapper crab-like biters (via "Armoured Biters")
     - Power generation
       - Fluids-based boilers and early steam turbines (via "Superheating")
       - Plutonium power and weapon production chains (via "PlutoniumEnergy")
